--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "main": "src/index.js",
   "scripts": {
     "start": "node src/index.js",
-    "test": "mocha src/**/*.test.js"
+    "test": "mocha src/**/*.test.js",
+    "lint": "eslint src/",
+    "prettier": "prettier --check ."
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^7.24.0",
     "mocha": "^8.3.2",
+    "prettier": "2.2.1",
     "supertest": "^6.1.3"
   }
 }
