--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,6 +35,12 @@ jobs:
         
       - name: Run unit tests
         run: npm test
+        
+      - name: Run eslint
+        run: npm lint
+      
+      - name: Run prettier
+        run: npm prettier
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
