--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,10 +37,10 @@ jobs:
         run: npm test
         
       - name: Run eslint
-        run: npm lint
+        run: npm run lint
       
       - name: Run prettier
-        run: npm prettier
+        run: npm run prettier
 
       # Runs a single command using the runners shell
       - name: Run a one-line script
